* fixed deadlock with failed contexts during shutdown

Package org.springframework.osgi.service
* removed deprecation from AbstractOsgiServiceImportFactoryBean to maintain backwards compatibility
* removed package visible methods from AbstractOsgiServiceImportFactoryBean
* removed deprecated exporter base class AbstractOsgiServiceExporter

Package org.springframework.osgi.test
* removed deprecated #getPlatformProperties() method from platforms classes

Package org.springframework.osgi.web
* removed support for extender configuration at META-INF/spring
* improved war scanner Servlet 2.5 compliance (by considering as WARs only bundles with ".war" extension)


Changes in version 1.1.0 RC1 (2008-06-24)
-----------------------------------------

General
* removed unused osgi-core.jar from bundle archetype
* migrated some of the project dependencies to SpringSource Bundle Repository
* removed internal package org.springframework.osgi.service.dependency (and associated dependencies) from the public 
  API
* extenders configuration file changed from META-INF/spring to META-INF/spring/extender to avoid confusion

Package org.springframework.osgi.config
* fixed localization problem in xml enumeration conversion 
* fixed listener double invocation caused by JDK 5 bridge methods

Package org.springframework.osgi.context
* refined AbstractOsgiBundleApplicationContext internal resource loader creation so that subclasses can override it
* improved internal namespace service handling
* improved AbstractOsgiBundleApplicationContext handling of ResourceLoader methods
* introduced ContextClassLoaderProvider interface as a strategy for customizing the application context thread context
  class loader
* removed ConfigurableOsgiBundleApplicationContext signature from OsgiBundleApplicationContextEvent
* introduced new importer waiting event hierarchy (org.springframework.osgi.service.importer.event package)
* improved handling of OSGi namespaces during shutdown